Fix: QueryEditor has wrong height in old Chrome versions

--- a/client/app/assets/less/redash/query.less
+++ b/client/app/assets/less/redash/query.less
@@ -88,12 +88,6 @@ edit-in-place p.editable:hover {
   margin-bottom: 5px;
 }
 
-.ace_editor.ace_autocomplete .ace_completion-highlight {
-  text-shadow: none !important;
-  background: #ffff005e;
-  font-weight: 600;
-}
-
 .query-metadata {
   background: #fff;
   overflow: hidden;
