--- a/client/app/components/queries/QueryEditor/index.less
+++ b/client/app/components/queries/QueryEditor/index.less
@@ -11,6 +11,15 @@
     flex: 1 1 auto;
     position: relative;
 
+    .ace_editor {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      margin: 0;
+    }
+
     &[data-executing] {
       .ace_marker-layer {
         .ace_selection {
